"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-06-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-28:
	  prsim: who-newline command to separate names by line, readability.
		Tested, documentation updated. 


2008-06-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-27:
	  prsim: added why command variants with depth limitations.
		Tested, documented.  


2008-06-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-26:
	  Fixed ICE-on-invalid bug in error recovery in parsers:
		return value of YYSTYPE should not clobber yylval
		in the event of a syntax error (check yychar).
		Validated against yacc and bison-2.0.
		Test cases added: basic/026,027,028.


	* HACKT-00-01-04-main-00-82-25:
	  prsim: State-prsim.cc: removed invalid assert in
		flush_pending_queue(), where there can be multiple 
		pending interference events in pending queue.
		Problem originated from original prsim, 
		now fixed by Rajit in prs.c -r1.32.  (Thanks!)
		Reduced from test case submitted by Tadeo.  


2008-06-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-24+:
	  No source revision, just added some prsim test cases
		for checking exclusivity in channel types.  


2008-06-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-24:
	  No source revision, just Makefile maintainence, 
		and distcheck release bump.


2008-05-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-23:
	  util/ChangeLog: object binary format is now checked and diagnosed. 


	* HACKT-00-01-04-main-00-82-22:
	  sim/prsim/ExprAlloc.cc: when taking OR combination of rules 
		on the same node, check for size-limit before appending 
		subtrees to OR-expressions.  Fallback to allocating
		new OR expression when it is exceeded.  