@@ -1,0 +1,38 @@
+# "channel-test-non-QDI-a-01.prsimrc"
+# @haco@ channel-test-non-QDI-a.haco-a
+
+# echo-commands on
+channel C e:0 :0 d:2
+channel-source-args-loop C 0 1
+
+watchall
+timing uniform
+
+set C.e 0
+channel-reset C
+cycle
+getall C
+cycle
+channel-release C
+cycle
+time
+
+set C.e 1
+cycle
+set C.e 0
+cycle
+set C.e 1
+cycle
+time
+
+set C.e 0
+echo intentional non-QDI firing
+step-event
+queue
+set C.e 1
+step-event
+# DEATH
+queue
+
+cycle
+
