@@ -1,0 +1,15 @@
+// "channel-test-non-QDI-a.hac"
+// test case, ISE-on-invalid, reduced by fang
+
+defchan e1of2 <: chan(bool)(bool d[2]; bool t, f, e) {
+	d[0] = f;
+	d[1] = t;
+	spec { exclhi(f,t) }
+	send {}
+	recv{}
+}
+
+// will manually bucket and mis-bucket it
+e1of2 C;
+
+
